...
    func validarTextField (textFields: [UITextField]) -> Bool{
        var allOK : Bool = true
        
        for textField in textFields {
            if textField.text == ""{
                allOK = false
                let alert: UIAlertController = UIAlertController(title: "Campos não preenchidos", message: "Preencha os campos corretamente", preferredStyle: .alert)
                
                let actionOk: UIAlertAction = UIAlertAction(title: "Ok", style: .default) { (acao) in
                    
                    
                }
                
                alert.addAction(actionOk)
                self.present(alert, animated: true, completion: nil)
...
