...
    }
    
    func safariViewControllerDidFinish(_ controller: SFSafariViewController) {
        controller.dismiss(animated: true, completion: nil)
    }
    @IBAction func btnInvestir(_ sender: UIButton) {
        let alert: UIAlertController = UIAlertController(title: "Invetimento", message: "Parabéns investimento realizado com sucesso !", preferredStyle: .alert)
        
        let actionOk: UIAlertAction = UIAlertAction(title: "Ok", style: .default) { (acao) in
            
            
        }
        
        alert.addAction(actionOk)
        self.present(alert, animated: true, completion: nil)
...
